# langchain-leanring

./: .env.example  .gitignore  AGENTS.md  ENV_CONFIG_README.md  LEARNING_PATH.md  PROJECT_SUMMARY.md  README.md  REQUIREMENTS_README.md  explore_memory.py  install_dependencies.sh  patch_httpx_encoding.py  test_classic_imports.py  test_community_imports.py  test_config.py  test_imports.py  update_requirements.py  validate_requirements.py  working_imports_demo.py
02-prompts/: README.md  (+2 more)
src/app/autogen-learning/: INSTALL.md  README.md  pyproject.toml  requirements-full.txt  requirements.txt
src/app/autogen-learning/01-core/advanced/: README.md  demo_16_multitenancy.py  demo_17_event_sourcing.py  demo_18_distributed_runtime.py
src/app/autogen-learning/01-core/agents/: README.md  demo_06_routed_agent.py  demo_07_default_subscription.py  demo_08_agent_state.py
src/app/autogen-learning/01-core/concepts/: README.md  demo_01_quickstart.py  demo_02_topic_subscription.py  demo_03_agent_lifecycle.py  demo_04_message_types.py  demo_05_message_context.py
src/app/autogen-learning/01-core/messaging/: README.md  demo_13_direct_messaging.py  demo_14_broadcast.py  demo_15_rpc_patterns.py
src/app/autogen-learning/01-core/runtime/: README.md  demo_09_runtime_basic.py  demo_10_agent_registration.py  demo_11_message_delivery.py  demo_12_shutdown_idle.py
src/app/autogen-learning/02-agentchat/: README.md
src/app/autogen-learning/02-agentchat/advanced/: OFFICIAL_DOCS_REFERENCE.md  README.md  demo_32_memory_management.py  demo_33_human_interaction.py  demo_34_image_messages.py
src/app/autogen-learning/02-agentchat/basics/: README.md  demo_19_assistant_agent.py  demo_20_coding_agent.py  demo_21_text_chat_agent.py  demo_22_user_proxy_agent.py
src/app/autogen-learning/02-agentchat/conversations/: README.md  demo_23_simple_conversation.py  demo_24_sequential_conversation.py  demo_25_conversation_termination.py
src/app/autogen-learning/02-agentchat/teams/: README.md  demo_26_roundrobin_team.py  demo_27_selector_team.py  demo_28_custom_team.py
src/app/autogen-learning/02-agentchat/tools/: README.md  demo_29_python_functions.py  demo_30_tool_usage.py  demo_31_code_execution.py
src/app/autogen-learning/02-agentchat/tutorial- official/: agents.py  human-in-the-loop.py  managing-state.py  messages.py  models.py  teams.py  termination.py
src/app/autogen-learning/common/config/: __init__.py  constants.py  settings.py
src/app/autogen-learning/docs/: 00-project-setup.md  01-architecture-overview.md  02-learning-path.md  README.md
src/app/autogen-learning/tests/: conftest.py
(+126 files in other folders)
